containers/countries/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: countries-deployment
  annotations:
    version: 1.0.0
spec:
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: countries
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: countries
    spec:
      securityContext: {}
      terminationGracePeriodSeconds: 30
      containers:
        - name: countries
          image: "countries:1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 1G
            requests:
              cpu: 200m
              memory: 500M
