containers/countries/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: countries-service
  labels:
    app: countries
spec:
  type: ClusterIP
  selector:
    app: countries
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: http
  sessionAffinity: None
