containers/countries/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: countries-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/countries"
        backend:
          service:
            name: countries-service
            port:
              number: 8080
